fix: smaller font size on mobile

--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ a.btn-1, a.btn-2 {
 
 @media only screen and (max-width: 768px) {
     .title {
-        font-size: 40px;
+        font-size: 35px;
         margin-bottom: 1%;
     }
     .subtitle {
-        font-size: 20px;
+        font-size: 15px;
     }
     nav {
         justify-content: space-between; 
@@ -163,13 +163,13 @@ a.btn-1, a.btn-2 {
     }
 
     .btn-1 {
-        padding: 5px 10px;
-        font-size: 23px;
+        padding: 3px 5px;
+        font-size: 15px;
         margin: 8px;
     }
     .btn-2 {
-        padding: 5px 10px;
-        font-size: 23px;
+        padding: 3px 5px;
+        font-size: 15px;
         margin: 8px;
     }
 }
